<resources>
    <string name="app_name">Gestor de pedidos</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Configuração</string>

    <string name="menu_pedidos">Pedidos</string>
    <string name="menu_cardapio">Cardápio</string>
    <string name="stringNome">Nome</string>
    <string name="descricao">Descrição</string>
    <string name="valor">Valor</string>
    <string name="salva">Salva</string>
    <string name="stringEntrar">Entrar</string>
    <string name="stringCadastrar">Cadastrar</string>
    <string name="stringRecuperaSenha">Esqueceu sua senha?</string>
    <string name="stringSenha">Senha</string>
    <string name="stringEmail">Email</string>
    <string name="stringCampoNecessario">Campo necessário</string>
    <string name="stringSair">Sair</string>

    <string name="stringCasoLetraMaiuscula">(.*[A-Z].*)</string>
    <string name="stringCasoLetraMinuscula">(.*[a-z].*)</string>
    <string name="stringCasoNumerico">(.*[0-9].*)</string>
    <string name="stringCasoEspecial">(.*[@,#,$,%].*$)</string>
    <string name="stringEmailPadrao">^[_A-Za-z0-9-\\+]+(\\.[_A-Za-z0-9-]+)*@+[A-Za-z0-9-]+(\\.[A-Za-z0-9]+)*(\\.[A-Za-z]{2,})$</string>
    <string name="stringEmailInvalido">Email inválido!</string>
    <string name="stringSenhaCurta">Senha muito curta.</string>
    <string name="stringSenhaNumerica">Senha deve conter ao menos um número.</string>
    <string name="stringSenhaMinuscula">Senha deve conter ao menos uma letra minúscula.</string>
    <string name="stringSenhaMaiuscula">Senha deve conter ao menos uma letra maiúscula.</string>
    <string name="stringSenhaEspecial">Senha deve conter ao menos um caracter especial.</string>
    <string name="stringFechaMenuNavegacao">Fecha menu navegação</string>
    <string name="stringAbreNavegacao">Abre menu navegação</string>
    <string name="stringCategoria">Categoria</string>
    <string name="stringDescricaoBotaoFlutuanteCadastraProduto">Botão flutuante do fragmento cardápio</string>
    <string name="stringDescricaoBotaoFlutuanteCadastraPedido">Botão flutuante do fragmento pedidos</string>
    <string name="stringDesfazer">Desfazer</string>
    <string name="string_resumo_pedido">Resumo do pedido</string>
    <string name="string_confirma_pedido">Confirma pedido</string>
    <string name="string_observacao">Observações</string>
    <string name="stringMesa">Mesa </string>
    <string name="stringBebidas">Bebidas</string>
    <string name="stringPizzas">Pizzas</string>
    <string name="stringSanduiches">Sanduíches</string>
    <string name="stringTacas">Taças e Milk-shakes</string>
    <string name="stringDiversos">Diversos</string>
    <string name="stringMoedaReal">R$ </string>
    <string name="stringEstatoParaFazer">Para fazer</string>
    <string name="stringEstadoFazendo">Fazendo</string>
    <string name="stringEstadoPronto">Pronto</string>
    <string name="stringEstadoEntregue">Entregue</string>
    <string name="stringImagemConteudoExpandido">Imagem índice conteudo expandido</string>
    <string name="stringEmpresa">Empresa</string>
    <string name="stringAdministrador">Administrador</string>
    <string name="stringCadastrarEmpresa">Cadastrar empresa</string>
    <string name="stringNomeAplicativo">Gestor de pedidos</string>
    <string-array name="categorias">
        <item>Sanduíches</item>
        <item>Pizzas</item>
        <item>Taças e Milk-shakes</item>
        <item>Bebidas</item>
        <item>Diversos</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>