<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navPedidos"
            android:icon="@drawable/ic_menu_pedidos"
            android:title="@string/menu_pedidos" />
        <item
            android:id="@+id/navCardapio"
            android:icon="@drawable/ic_menu_cardapio"
            android:title="@string/menu_cardapio" />
    </group>
    <group
        android:id="@+id/navGrupo2"
        android:checkableBehavior="single">
        <item
            android:id="@+id/navSair"
            android:icon="@drawable/ic_menu_sair"
            android:title="@string/stringSair" />
    </group>
</menu>