<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/constraintLayoutAdicionaNovoPedido"
    tools:context=".ui.activity.NovoPedidoActivity">

    <HorizontalScrollView
        android:id="@+id/scrollViewGrupoChip"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroupCategoriasNovoPedido"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:singleLine="true"
            android:layout_margin="8dp"
            style="@style/Widget.Material3.ChipGroup">

            <com.google.android.material.chip.Chip
                android:id="@+id/chipCategoriaSanduiches"
                android:text="@string/stringSanduiches"
                android:layout_marginStart="8dp"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/chipCategoriaPizzas"
                android:text="@string/stringPizzas"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/chipCategoriaTacasMilkshakes"
                android:text="@string/stringTacas"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/chipCategoriaBebidas"
                android:text="@string/stringBebidas"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/chipCategoriaDiversos"
                android:text="@string/stringDiversos"
                android:layout_marginEnd="8dp"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </com.google.android.material.chip.ChipGroup>
    </HorizontalScrollView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewNovoPedido"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/scrollViewGrupoChip"
        tools:listitem="@layout/item_novo_pedido"
        app:layout_constraintBottom_toTopOf="@id/txtTotalPedido"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txtTotalPedido"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:paddingTop="8dp"
        android:gravity="center"
        android:textSize="18sp"
        style="@style/Widget.MaterialComponents.TextView"
        app:layout_constraintBottom_toTopOf="@+id/btn_resumo_pedido"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recyclerViewNovoPedido" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_resumo_pedido"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:padding="8dp"
        android:text="@string/string_resumo_pedido"
        android:textSize="22sp"
        style="@style/Widget.Material3.Button.OutlinedButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/progressoCircularNovoPedido"
        style="@style/Widget.Material3.CircularProgressIndicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>