<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/constraintLayoutFragmentoPedidos"
    tools:context=".ui.fragment.FragmentoPedidos">

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroupEstadosPedidos"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:singleLine="true"
        app:singleSelection="true"
        app:selectionRequired="true"
        android:layout_margin="8dp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.chip.Chip
            android:id="@+id/chipEstadoParaFazerPedidos"
            android:text="@string/stringEstatoParaFazer"
            android:checked="true"
            android:layout_marginStart="8dp"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/chipEstadoFazendoPedidos"
            android:text="@string/stringEstadoFazendo"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/chipEstadoProntoPedidos"
            android:text="@string/stringEstadoPronto"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/chipEstadoEntreguePedidos"
            android:text="@string/stringEstadoEntregue"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </com.google.android.material.chip.ChipGroup>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewFragmentoPedido"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chipGroupEstadosPedidos"
        app:layout_constraintVertical_bias="1.0" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/botaoFlutuanteNovoPedido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:contentDescription="@string/stringDescricaoBotaoFlutuanteCadastraPedido"
        android:src="@drawable/ic_adiciona"
        android:theme="@style/Theme.Material3.DayNight"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:focusable="true" />

    <ProgressBar
        android:id="@+id/progressoCircularPedidos"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/recyclerViewFragmentoPedido"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chipGroupEstadosPedidos" />
</androidx.constraintlayout.widget.ConstraintLayout>