<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layoutTelaInicial"
    tools:context=".ui.activity.TelaInicialActivity">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txtNomeEmpresa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stringNomeAplicativo"
        android:textSize="50sp"
        android:layout_margin="8dp"
        android:padding="8dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnEntrar"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:textSize="28sp"
        android:text="@string/stringEntrar"
        app:layout_constraintBottom_toTopOf="@+id/btnCadastrarEmpresa"
        app:layout_constraintEnd_toEndOf="@id/btnCadastrarEmpresa"
        app:layout_constraintStart_toStartOf="@id/btnCadastrarEmpresa" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCadastrarEmpresa"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_margin="32dp"
        android:textSize="28sp"
        android:text="@string/stringCadastrarEmpresa"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>