<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/constraint_layout_cadastra_usuario"
    tools:context=".ui.activity.CadastraUsuarioActivity">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txtNomeEmpresa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="50sp"
        android:padding="8dp"
        android:layout_margin="16dp"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@id/txtInputNomeNovoUsuario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Nome da Empresa"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtInputNomeNovoUsuario"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:hint="@string/stringNome"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        app:layout_constraintStart_toStartOf="@id/txtInputEmailNovoUsuario"
        app:layout_constraintEnd_toEndOf="@id/txtInputEmailNovoUsuario"
        app:layout_constraintBottom_toTopOf="@id/txtInputEmailNovoUsuario">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtInputNomeNovoUsuario"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtInputEmailNovoUsuario"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:hint="@string/stringEmail"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        app:layout_constraintStart_toStartOf="@id/txtInputSenhaNovoUsuario"
        app:layout_constraintEnd_toEndOf="@id/txtInputSenhaNovoUsuario"
        app:layout_constraintBottom_toTopOf="@id/txtInputSenhaNovoUsuario">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtInputEmailNovoUsuario"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtInputSenhaNovoUsuario"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:passwordToggleEnabled="true"
        android:hint="@string/stringSenha"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        app:layout_constraintStart_toStartOf="@id/btnCadastrarNovoUsuario"
        app:layout_constraintEnd_toEndOf="@id/btnCadastrarNovoUsuario"
        app:layout_constraintBottom_toTopOf="@id/btnCadastrarNovoUsuario">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtInputSenhaNovoUsuario"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCadastrarNovoUsuario"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textSize="28sp"
        android:textAllCaps="false"
        android:text="@string/stringCadastrar"
        style="@style/Widget.Material3.Button.OutlinedButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>